[package]
name = "ip2d"
description = "A converter for IPv4 addresses"
version = "0.1.3"
license = "MIT"
authors = ["0xflotus <0xflotus@gmail.com>"]
edition = "2018"
readme = "README.md"
categories = ["command-line-utilities"]
repository  = "https://github.com/0xflotus/ip2d-rust"
homepage = "https://github.com/0xflotus/ip2d-rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-rc.5"

[[bin]]

name = "ip2d"